[style] prevent main content from shrinking too much

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,3 +1,7 @@
+#main {
+  min-height: 80vh;
+}
+
 #footer {
   position: relative;
 }
